# jj-status-daemon

./: CHANGELOG.md  Cargo.toml  PROJECT.md  README.md  build.rs  dist-workspace.toml  mise.toml
.github/workflows/: ci.yml
design/: INCREMENTAL.md  staleness.md  update-behavior.md
mise-tasks/: tokio-console
src/: client.rs  config.rs  daemon.rs  git.rs  init.rs  jj.rs  main.rs  protocol.rs  template.rs  watcher.rs
src/templates/: ascii.tera  detail.tera  gitstatus.tera  minimal.tera  nerdfont.tera  not_ready.tera  ohmyzsh.tera  pure.tera  simple.tera  starship.tera  unicode.tera
