[package]
name = "jj-status-daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt", "net", "process", "time", "signal", "io-util", "macros", "sync", "fs"] }
notify = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
dirs = "6"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt", "net", "process", "time", "signal", "io-util", "macros", "sync", "fs", "test-util"] }
